[package]
name = "rust-hyper-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1.3"
httpmock = "0.7.0"
hyper = {version = "1.6.0", features = ["full"]}
hyper-proxy = "0.9.1"
hyper-util = {version = "0.1.11", features= ["full"]}
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"]}
tower = "0.5.2"
